POWR-620 disable HTML Purifier and add iframe to allowed tags in text format, to see if that gets embedded video player to work.

--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -20,7 +20,7 @@ mode: embedded
 content:
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       autoplay: true
@@ -36,18 +36,11 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  name:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
   field_media_in_library: true
   field_transcript: true
+  name: true
   thumbnail: true
   uid: true
