--- a/web/sites/default/config/embed.button.audio_video_browser.yml
+++ b/web/sites/default/config/embed.button.audio_video_browser.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - media.type.audio
     - media.type.video
   content:
     - 'file:file:f3b925f5-31b8-4e95-bdf5-a3db07f02214'
@@ -15,6 +16,7 @@ type_id: entity
 type_settings:
   entity_type: media
   bundles:
+    - audio
     - video
   display_plugins:
     - 'view_mode:media.embedded'
