POWR-581 Add no result text to my content and my media

--- a/web/sites/default/config/views.view.my_media.yml
+++ b/web/sites/default/config/views.view.my_media.yml
@@ -774,7 +774,20 @@ display:
           content: '@total found'
           plugin_id: result
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No result found'
+            format: simple_editor
+          plugin_id: text
       relationships:
         group_content:
           id: group_content
