POWR-620 - starting to build out new document embed display with custom twig template.

--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
@@ -60,6 +62,8 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_file_size: true
   field_media_in_library: true
+  field_mime_type: true
   thumbnail: true
   uid: true
