--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
   module:
@@ -53,7 +55,9 @@ content:
     region: content
 hidden:
   created: true
+  field_file_size: true
   field_media_in_library: true
+  field_mime_type: true
   path: true
   status: true
   uid: true
