--- a/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
@@ -5,9 +5,14 @@ dependencies:
   config:
     - core.entity_view_mode.media.embedded
     - field.field.media.document.field_document
+    - field.field.media.document.field_file_size
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
+  module:
+    - ds
+    - file
 _core:
   default_config_hash: qwXr3yVUHU3LwMQ1n9mTyDj2s7sUqpNtasS-nSu86rE
 id: media.document.embedded
@@ -15,19 +20,87 @@ targetEntityType: media
 bundle: document
 mode: embedded
 content:
+  created:
+    type: timestamp
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      date_format: short
+      custom_date_format: ''
+      timezone: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_document:
+    type: file_default
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      use_description_as_link_text: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_file_size:
+    type: number_integer
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_mime_type:
+    type: string
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   name:
     type: string
     weight: 0
     region: content
     label: hidden
     settings:
-      link_to_entity: true
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  uid:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
-  created: true
-  field_document: true
   field_media_in_library: true
   field_summary: true
   thumbnail: true
-  uid: true
