--- a/web/sites/default/config/media.type.document.yml
+++ b/web/sites/default/config/media.type.document.yml
@@ -17,4 +17,6 @@ queue_thumbnail_downloads: false
 new_revision: false
 source_configuration:
   source_field: field_document
-field_map: {  }
+field_map:
+  mimetype: field_mime_type
+  filesize: field_file_size
