POWR-620 added <div> <span> <i> to allowed tags in text format, to support tags currently in new document--embedded twig template

--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -16,7 +16,7 @@ filters:
     status: true
     weight: -48
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <iframe width height frameborder allowfullscreen src>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <iframe width height frameborder allowfullscreen src> <div class> <span class> <i class>'
       filter_html_help: true
       filter_html_nofollow: false
   htmlpurifier:
