--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -66,7 +66,7 @@ variant_settings:
       id: search_api_page_form_block
       label: 'Search Portland.gov'
       provider: search_api_page
-      label_display: visible
+      label_display: '0'
       region: content
       weight: -2
       uuid: 8fd66517-9a80-4a79-931e-517cbdab21b6
