POWR-635 update node add/edit to use main theme.

--- a/web/sites/default/config/switch_page_theme.settings.yml
+++ b/web/sites/default/config/switch_page_theme.settings.yml
@@ -1,9 +1,9 @@
 spt_table:
   -
-    status: '1'
     pages: "/my-content\r\n/my-media\r\n/my-groups\r\n/group/*/edit\r\n/group/*/delete\r\n/group/*/manage-display\r\n/group/*/content\r\n/group/*/members\r\n/group/*/nodes\r\n/group/*/media"
     theme: adminimal_theme
     weight: '-10'
+    status: 0
     roles:
       anonymous: 0
       authenticated: 0
