POWR-635 reimplement POWR-440 which was lost in initial tweme creation.

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -16,6 +16,7 @@ dependencies:
   module:
     - chosen_field
     - content_moderation
+    - maxlength
     - paragraphs
     - path
 id: node.city_service.default
@@ -143,9 +144,12 @@ content:
     weight: 0
     region: content
     settings:
-      size: 60
+      size: 78
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 78
+        maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
     weight: 8
