POWR-644 add everything from tweme to Cloudy and export config

--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -1,41 +1,25 @@
 name: Cloudy
+description: Lightweight Bootstrap theme with Sass for Portland.gov
+
 type: theme
-description: 'SASS Bootstrap Barrio Subtheme.'
-# version: VERSION
-# core: 8.x
-base theme: bootstrap_barrio
+core: 8.x
+base theme: classy
 
 libraries:
   - cloudy/global-styling
-libraries-override:
-  bootstrap_barrio/global-styling: false
-  bootstrap_barrio/file: false
+
 stylesheets-remove:
   - '@extlink/extlink.css'
-regions:
-  top_header: 'Top Header'
-  top_header_form: "Top Header Form"
-  header: Header
-  header_form: "Header Form"
-  primary_menu: 'Primary menu'
-  secondary_menu: 'Secondary menu'
-  banner_top: 'Top banner'
-  page_top: 'Page top'
-  page_bottom: 'Page bottom'
-  featured_top: 'Featured top'
-  highlighted: Highlighted
-  tabs: 'Administrative Tabs'
-  breadcrumb: Breadcrumb
-  content: Content
-  sidebar_first: 'Sidebar first'
-  sidebar_second: 'Sidebar second'
-  featured_bottom_first: 'Featured bottom first'
-  featured_bottom_second: 'Featured bottom second'
-  featured_bottom_third: 'Featured bottom third'
-  footer_first: 'Footer first'
-  footer_second: 'Footer second'
 
-version: '8.x-1.0'
-core: '8.x'
-project: 'cloudy'
-datestamp: 1525127885
+regions:
+  global_admin: Global admin
+  pre_header: Pre-header
+  header: Header
+  primary_menu: Primary menu
+  header_form: Header form
+  tabs: Admin tabs
+  messages: Messages
+  pre_content: Pre-content
+  content: Content
+  footer_first: Footer first
+  footer_second: Footer second
