--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cloudy",
-    "version": "8.1.0",
-    "description": "Barrio SASS implementation",
+    "version": "8.2.0",
+    "description": "Simple Boostrap theme with SASS",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,15 +11,14 @@
     "keywords": [
         "SASS",
         "Bootstrap",
-        "Drupal",
-        "Barrio"
+        "Drupal"
     ],
-    "author": "@hatuhay",
+    "author": "@joshuami",
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {
-        "bootstrap": "^4.0.0",
-        "browser-sync": "~2.18.13",
+        "bootstrap": "^4.1.0",
+        "browser-sync": "^2.26.3",
         "gulp": "~3.9.1",
         "gulp-autoprefixer": "~4.0.0",
         "gulp-concat": "^2.6.1",
