--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -23,12 +23,12 @@ features:
   node_user_picture: true
   comment_user_picture: true
   comment_user_verification: true
-  favicon: true
+  favicon: 1
 logo:
-  use_default: false
+  use_default: 1
   path: themes/custom/cloudy/images/logos/logo-alpha.svg
 favicon:
-  use_default: false
+  use_default: 1
   path: themes/custom/cloudy/favicon.ico
   mimetype: image/vnd.microsoft.icon
 bootstrap_barrio_sidebar_collapse: 0
