POWR-644 update blocks and apply a fix for media browsing and img-fluid conflict.

--- a/web/sites/default/config/block.block.aggregatedtopic.yml
+++ b/web/sites/default/config/block.block.aggregatedtopic.yml
@@ -1,6 +1,6 @@
 uuid: 19a85e04-8d05-461b-aa7a-5137b88ef7f9
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.aggregated_topic
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: aggregatedtopic
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -6
 provider: null
 plugin: 'facet_block:aggregated_topic'
