--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
@@ -1,6 +1,6 @@
 uuid: 88203d1b-e3b8-4b0f-9510-892774c49d9a
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.bureaus_by_audience
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbyaudience
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -10
 provider: null
 plugin: 'facet_block:bureaus_by_audience'
