--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
@@ -1,6 +1,6 @@
 uuid: 97e0dff4-1e0c-4f31-9055-24e9d41832ed
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.bureaus_by_topic
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbytopic
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -9
 provider: null
 plugin: 'facet_block:bureaus_by_topic'
