--- a/web/sites/default/config/block.block.cloudy_help.yml
+++ b/web/sites/default/config/block.block.cloudy_help.yml
@@ -1,6 +1,6 @@
 uuid: 138e5fc2-11cd-4f0d-9183-273d37fba312
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - help
@@ -10,7 +10,7 @@ _core:
   default_config_hash: MhtNdV__HKRTab0ZPjkPNfYL4Ng4UPBucDLoC7Rg5Eo
 id: cloudy_help
 theme: cloudy
-region: highlighted
+region: global_admin
 weight: -14
 provider: null
 plugin: help_block
