--- a/web/sites/default/config/block.block.cloudy_services_by_action.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_action.yml
@@ -1,6 +1,6 @@
 uuid: 76e9f2c4-cdbd-49b0-be63-7170cd50881a
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.services_by_action
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_services_by_action
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -12
 provider: null
 plugin: 'facet_block:services_by_action'
