--- a/web/sites/default/config/block.block.cloudy_services_by_audience.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_audience.yml
@@ -1,6 +1,6 @@
 uuid: e21b6ff3-022d-4b8f-99c7-71733cbf1f07
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.services_by_audience
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_services_by_audience
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -13
 provider: null
 plugin: 'facet_block:services_by_audience'
