--- a/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 43c0303a-0112-4cd4-bd68-a8e1b6e5909c
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.related
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_views_block__related_block_1
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -8
 provider: null
 plugin: 'views_block:related-block_1'
