--- a/web/sites/default/config/block.block.grouptitle.yml
+++ b/web/sites/default/config/block.block.grouptitle.yml
@@ -1,6 +1,6 @@
 uuid: 4a94a0c7-1c85-44dc-9dd5-b2cae144eac1
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.group_title
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: grouptitle
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -7
 provider: null
 plugin: 'facet_block:group_title'
