--- a/web/sites/default/config/block.block.views_block__group_programs_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_programs_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 60d4fa68-e6bd-4999-94f0-2b1e183f7dc7
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.group_programs
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: views_block__group_programs_block_1
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -15
 provider: null
 plugin: 'views_block:group_programs-block_1'
