--- a/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 278af0c3-4455-499e-b4c2-47225c673cbc
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.group_projects
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: views_block__group_projects_block_1
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -14
 provider: null
 plugin: 'views_block:group_projects-block_1'
