--- a/web/sites/default/config/block.block.views_block__top_searches_block.yml
+++ b/web/sites/default/config/block.block.views_block__top_searches_block.yml
@@ -1,6 +1,6 @@
 uuid: 8ba84ede-86cc-48e3-9321-bbb3a2ec09a0
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.top_searches
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: views_block__top_searches_block
 theme: cloudy
-region: featured_top
+region: global_admin
 weight: -16
 provider: null
 plugin: 'views_block:top_searches-block_1'
