--- a/web/sites/default/config/block.block.cloudy_services_by_topic.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_topic.yml
@@ -1,6 +1,6 @@
 uuid: 05781560-8800-4dfd-a0bf-6d3e3979c683
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - facets.facet.services_by_topic
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_services_by_topic
 theme: cloudy
-region: sidebar_second
+region: global_admin
 weight: -11
 provider: null
 plugin: 'facet_block:services_by_topic'
