--- a/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
@@ -1,6 +1,6 @@
 uuid: c42c8969-795d-4d34-88eb-bfd5f3976988
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.group_notifications_block
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_views_block__group_notifications_block_block_1
 theme: cloudy
-region: highlighted
+region: global_admin
 weight: -15
 provider: null
 plugin: 'views_block:group_notifications_block-block_1'
