--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
@@ -1,6 +1,6 @@
 uuid: 0e63a77c-2eab-4c1b-80fb-c72db2053976
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: searchapipagesearchblockformwithportlandstyle
 theme: cloudy
-region: featured_top
+region: global_admin
 weight: -17
 provider: null
 plugin: portland_search_block
