POWR-644 clean up block layout.

--- a/web/sites/default/config/block.block.aggregatedtopic.yml
+++ b/web/sites/default/config/block.block.aggregatedtopic.yml
@@ -1,6 +1,6 @@
 uuid: 19a85e04-8d05-461b-aa7a-5137b88ef7f9
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.aggregated_topic
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: aggregatedtopic
 theme: cloudy
-region: global_admin
-weight: -6
+region: content
+weight: -4
 provider: null
 plugin: 'facet_block:aggregated_topic'
 settings:
