--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
@@ -1,6 +1,6 @@
 uuid: 88203d1b-e3b8-4b0f-9510-892774c49d9a
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.bureaus_by_audience
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbyaudience
 theme: cloudy
-region: global_admin
-weight: -10
+region: content
+weight: -1
 provider: null
 plugin: 'facet_block:bureaus_by_audience'
 settings:
