--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
@@ -1,6 +1,6 @@
 uuid: 97e0dff4-1e0c-4f31-9055-24e9d41832ed
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.bureaus_by_topic
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbytopic
 theme: cloudy
-region: global_admin
-weight: -9
+region: content
+weight: 0
 provider: null
 plugin: 'facet_block:bureaus_by_topic'
 settings:
