--- a/web/sites/default/config/block.block.cloudy_messages.yml
+++ b/web/sites/default/config/block.block.cloudy_messages.yml
@@ -1,6 +1,6 @@
 uuid: 751f2e55-ca80-403f-8138-ca6ae6588c13
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - system
@@ -10,8 +10,8 @@ _core:
   default_config_hash: 9RnnTUBcn0WRWXfrGOnId2H0Q31uQUeu_F5TnDxl2yg
 id: cloudy_messages
 theme: cloudy
-region: global_admin
-weight: -13
+region: messages
+weight: -15
 provider: null
 plugin: system_messages_block
 settings:
