--- a/web/sites/default/config/block.block.cloudy_services_by_action.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_action.yml
@@ -1,6 +1,6 @@
 uuid: 76e9f2c4-cdbd-49b0-be63-7170cd50881a
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.services_by_action
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_action
 theme: cloudy
-region: global_admin
-weight: -12
+region: content
+weight: -7
 provider: null
 plugin: 'facet_block:services_by_action'
 settings:
