--- a/web/sites/default/config/block.block.cloudy_services_by_audience.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_audience.yml
@@ -1,6 +1,6 @@
 uuid: e21b6ff3-022d-4b8f-99c7-71733cbf1f07
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.services_by_audience
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_audience
 theme: cloudy
-region: global_admin
-weight: -13
+region: content
+weight: -6
 provider: null
 plugin: 'facet_block:services_by_audience'
 settings:
