--- a/web/sites/default/config/block.block.cloudy_services_by_topic.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_topic.yml
@@ -1,6 +1,6 @@
 uuid: 05781560-8800-4dfd-a0bf-6d3e3979c683
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.services_by_topic
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_topic
 theme: cloudy
-region: global_admin
-weight: -11
+region: content
+weight: -5
 provider: null
 plugin: 'facet_block:services_by_topic'
 settings:
