--- a/web/sites/default/config/block.block.grouptitle.yml
+++ b/web/sites/default/config/block.block.grouptitle.yml
@@ -1,6 +1,6 @@
 uuid: 4a94a0c7-1c85-44dc-9dd5-b2cae144eac1
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - facets.facet.group_title
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: grouptitle
 theme: cloudy
-region: global_admin
-weight: -7
+region: content
+weight: -2
 provider: null
 plugin: 'facet_block:group_title'
 settings:
