--- a/web/sites/default/config/block.block.searchapipagesearchblockform.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockform.yml
@@ -1,30 +1,29 @@
-uuid: 8c5255b7-c74d-4aa1-813c-438d94511661
+uuid: 3c5cc74a-f156-4071-b421-c1dc86a35c29
 langcode: en
 status: true
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
   module:
-    - portland
+    - search_api_page
     - system
   theme:
     - cloudy
-id: searchapipagesearchblockformwithportlandstyle_2
+id: searchapipagesearchblockform
 theme: cloudy
 region: header_form
 weight: 0
 provider: null
-plugin: portland_search_block
+plugin: search_api_page_form_block
 settings:
-  id: portland_search_block
-  label: 'Search Api Page search block form with Portland style'
-  provider: portland
+  id: search_api_page_form_block
+  label: 'Search Portland.gov'
+  provider: search_api_page
   label_display: '0'
   search_api_page: search_portland_gov
-  size: small
 visibility:
   request_path:
     id: request_path
-    pages: "<front>\r\n/search"
+    pages: "<front>\r\n/search\r\n/search/*"
     negate: true
     context_mapping: {  }
