--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 301466cf-8917-48e4-bfc4-1aa90487b18c
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.categories_on_a_node
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: views_block__categories_on_a_node_block_1
 theme: cloudy
-region: global_admin
-weight: -5
+region: content
+weight: -8
 provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
