--- a/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 8bfb1247-31d5-4ac5-ae25-cd9b81ee785d
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.alerts
@@ -11,7 +11,7 @@ dependencies:
     - cloudy
 id: cloudy_views_block__alerts_block_1
 theme: cloudy
-region: global_admin
+region: pre_header
 weight: -15
 provider: null
 plugin: 'views_block:alerts-block_1'
