--- a/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
@@ -1,6 +1,6 @@
 uuid: c42c8969-795d-4d34-88eb-bfd5f3976988
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.group_notifications_block
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_views_block__group_notifications_block_block_1
 theme: cloudy
-region: global_admin
-weight: -15
+region: messages
+weight: -13
 provider: null
 plugin: 'views_block:group_notifications_block-block_1'
 settings:
