--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -18,6 +18,7 @@ permissions:
   - 'access media_browser entity browser pages'
   - 'access shortcuts'
   - 'access toolbar'
+  - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'revert city_service revisions'
   - 'revert event revisions'
