TWEME update the blocks for messaging—disabled for some reason; paragraph actions dropdown

--- a/web/sites/default/config/block.block.cloudy_help.yml
+++ b/web/sites/default/config/block.block.cloudy_help.yml
@@ -1,6 +1,6 @@
 uuid: 138e5fc2-11cd-4f0d-9183-273d37fba312
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - help
@@ -10,8 +10,8 @@ _core:
   default_config_hash: MhtNdV__HKRTab0ZPjkPNfYL4Ng4UPBucDLoC7Rg5Eo
 id: cloudy_help
 theme: cloudy
-region: global_admin
-weight: -14
+region: messages
+weight: -12
 provider: null
 plugin: help_block
 settings:
