--- a/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
@@ -13,15 +13,22 @@ bundle: location
 mode: default
 content:
   field_location_type:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 21
     settings:
-      title: Type
-      title_plural: Types
+      title: Location
+      title_plural: Locations
       edit_mode: closed
+      closed_mode: preview
+      autocollapse: all
+      closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
     region: content
   scheduled_publication:
