POWR-646 Remove cloudy/node_modules before pushing to Pantheon

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,7 @@ behat_tests: &behat_tests
           # Compile SCSS in our custom theme
           cd web/themes/custom/cloudy && npm run build && cd /var/www/html
           # Add all files before pushing to Pantheon
+          rm -rf web/themes/custom/cloudy/node_modules
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
           git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
