POWR-647 Enable stemming on DB indexes

--- a/web/sites/default/config/search_api.index.bureaus.yml
+++ b/web/sites/default/config/search_api.index.bureaus.yml
@@ -3,16 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.group.field_official_organization_name
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_audience
     - field.storage.group.field_topics
+    - field.storage.group.field_official_organization_name
+    - field.storage.group.field_shortname_or_acronym
     - search_api.server.database
   module:
     - taxonomy
+    - group
     - search_api
     - portland
-    - group
 id: bureaus
 name: Bureaus
 description: 'Index of the bureau/office group type.'
@@ -28,6 +28,7 @@ field_settings:
         - field.storage.group.field_audience
       module:
         - taxonomy
+        - taxonomy
   name_topics:
     label: 'Topics » Taxonomy term » Name'
     datasource_id: 'entity:group'
@@ -37,6 +38,7 @@ field_settings:
       config:
         - field.storage.group.field_topics
       module:
+        - taxonomy
         - taxonomy
   official_organization_name:
     label: 'Official organization name'
@@ -69,6 +71,9 @@ field_settings:
     datasource_id: 'entity:group'
     property_path: label
     type: string
+    dependencies:
+      module:
+        - group
 datasource_settings:
   'entity:group':
     bundles:
@@ -95,6 +100,16 @@ processor_settings:
       preprocess_query: -20
   portland_group_title_field: {  }
   rendered_item: {  }
+  stemmer:
+    all_fields: false
+    fields:
+      - rendered_item
+    exceptions:
+      mexican: mexic
+      texan: texa
+    weights:
+      preprocess_index: 0
+      preprocess_query: 0
 tracker_settings:
   default:
     indexing_order: fifo
