--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_audience
     - field.storage.node.field_community_actions
     - field.storage.node.field_popular
+    - field.storage.node.field_audience
     - field.storage.node.field_topics
     - search_api.server.database
     - core.entity_view_mode.node.search_result
@@ -111,6 +111,16 @@ processor_settings:
       preprocess_query: -20
   portland_group_title_field: {  }
   rendered_item: {  }
+  stemmer:
+    all_fields: false
+    fields:
+      - rendered_item
+    exceptions:
+      mexican: mexic
+      texan: texa
+    weights:
+      preprocess_index: 0
+      preprocess_query: 0
 tracker_settings:
   default:
     indexing_order: fifo
