--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -85,7 +85,7 @@ content:
     type: string
     weight: 1
     region: content
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
