--- a/web/sites/default/config/anonymous_login.settings.yml
+++ b/web/sites/default/config/anonymous_login.settings.yml
@@ -1,5 +1,5 @@
 login_path: /user/login
 _core:
   default_config_hash: ZKVq7lpyGFQf-SCuj_Ng2yLPD24rKHxz-TzGQxBjLl4
-paths: "~/openid-connect/azure\r\n~/sites/default/files/**\r\n*"
-message: 'Welcome to the closed alpha version of the new website platform for Portland, Oregon. Only city employees with a ROSE or PTLD account may log in at this time.'
+paths: "~/openid-connect/azure\r\n~/sites/default/files/**\r\n/admin\r\n/admin/*\r\n/my-groups\r\n/my-content\r\n/my-media\r\n/group/*/members\r\n/group/*/nodes\r\n/group/*/media\r\n/group/*/node/create\r\n/group/*/media/create"
+message: 'Welcome to the beta version of the new website platform for Portland, Oregon. City employees with a ROSE or PTLD account may log in, only assigned group admins and editors can edit content.'
