--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -16,7 +16,7 @@ filters:
     status: true
     weight: -50
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <iframe width height frameborder allowfullscreen src> <i class="">'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <i class="">'
       filter_html_help: true
       filter_html_nofollow: false
   htmlpurifier:
@@ -25,7 +25,7 @@ filters:
     status: true
     weight: -48
     settings:
-      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/)%'\r\n"
+      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n    i: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/)%'\r\n"
   entity_embed:
     id: entity_embed
     provider: entity_embed
