--- a/web/sites/default/config/views.view.media_entity.yml
+++ b/web/sites/default/config/views.view.media_entity.yml
@@ -1108,40 +1108,6 @@ display:
         - 'config:field.storage.media.field_summary'
         - 'config:field.storage.media.field_transcript'
         - 'config:field.storage.media.image'
-  embed_1:
-    display_plugin: embed
-    id: embed_1
-    display_title: Embed
-    position: 1
-    display_options:
-      display_extenders: {  }
-      style:
-        type: default
-        options:
-          row_class: 'list-group-item mb-3'
-          default_row_class: true
-          uses_fields: false
-      defaults:
-        style: false
-        row: false
-      row:
-        type: 'entity:media'
-        options:
-          relationship: none
-          view_mode: embedded
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - user.permissions
-      tags:
-        - 'config:field.storage.media.field_document'
-        - 'config:field.storage.media.field_media_video_embed_field'
-        - 'config:field.storage.media.field_summary'
-        - 'config:field.storage.media.field_transcript'
-        - 'config:field.storage.media.image'
   page_1:
     display_plugin: page
     id: page_1
@@ -1150,41 +1116,7 @@ display:
     display_options:
       display_extenders: {  }
       path: media/%
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - user.permissions
-      tags:
-        - 'config:field.storage.media.field_document'
-        - 'config:field.storage.media.field_media_video_embed_field'
-        - 'config:field.storage.media.field_summary'
-        - 'config:field.storage.media.field_transcript'
-        - 'config:field.storage.media.image'
-  page_2:
-    display_plugin: page
-    id: page_2
-    display_title: 'Page 2'
-    position: 1
-    display_options:
-      display_extenders: {  }
-      style:
-        type: default
-        options:
-          row_class: 'list-group-item mb-3'
-          default_row_class: true
-          uses_fields: false
-      defaults:
-        style: false
-        row: false
-      row:
-        type: 'entity:media'
-        options:
-          relationship: none
-          view_mode: embedded
-      path: mediatest
+      enabled: true
     cache_metadata:
       max-age: -1
       contexts:
